[gd_scene load_steps=58 format=3 uid="uid://c6bt6xvknm46f"]

[ext_resource type="Script" path="res://Script/main.gd" id="1_128wf"]
[ext_resource type="Texture2D" uid="uid://dsn6ty8q2n4up" path="res://img/360_F_601024377_wAmzzfFaHPIBhcaIVJaLUgC3jkjQh7aU.jpg" id="2_aqjna"]
[ext_resource type="Texture2D" uid="uid://cli5m0hp4p00n" path="res://DiceAnimation/dice0001.png" id="3_ejs4e"]
[ext_resource type="Texture2D" uid="uid://dypfxpphgr66x" path="res://DiceAnimation/dice0002.png" id="4_xbly2"]
[ext_resource type="Texture2D" uid="uid://bj12l7bufm63s" path="res://DiceAnimation/dice0003.png" id="5_cfig7"]
[ext_resource type="Texture2D" uid="uid://dmbe2820eottb" path="res://DiceAnimation/dice0004.png" id="6_ef0p0"]
[ext_resource type="Texture2D" uid="uid://cfmfl43m2dcki" path="res://DiceAnimation/dice0005.png" id="7_v3534"]
[ext_resource type="Texture2D" uid="uid://c712nlegktsd4" path="res://DiceAnimation/dice0006.png" id="8_y45fq"]
[ext_resource type="Texture2D" uid="uid://drmo8ouuvqgf7" path="res://DiceAnimation/dice0007.png" id="9_jt2x4"]
[ext_resource type="Texture2D" uid="uid://c0gdsny6pa601" path="res://DiceAnimation/dice0008.png" id="10_h7dq6"]
[ext_resource type="Texture2D" uid="uid://c4k7qyy821e06" path="res://DiceAnimation/dice0009.png" id="11_v8eo2"]
[ext_resource type="Texture2D" uid="uid://co5pcgex06yqx" path="res://DiceAnimation/dice0010.png" id="12_x4f80"]
[ext_resource type="Texture2D" uid="uid://bs1886roq18cq" path="res://DiceAnimation/dice0011.png" id="13_mnnvm"]
[ext_resource type="Texture2D" uid="uid://bp1d32fuivy0s" path="res://DiceAnimation/dice0012.png" id="14_gknfb"]
[ext_resource type="Texture2D" uid="uid://do75dynn52tic" path="res://DiceAnimation/dice0013.png" id="15_ujmns"]
[ext_resource type="Texture2D" uid="uid://oae7t6d2rr0g" path="res://DiceAnimation/dice0014.png" id="16_j2k6s"]
[ext_resource type="Texture2D" uid="uid://b5qu48t4fb0l6" path="res://DiceAnimation/dice0015.png" id="17_1kjr3"]
[ext_resource type="Texture2D" uid="uid://ca70bfc7noaig" path="res://DiceAnimation/dice0016.png" id="18_xat0t"]
[ext_resource type="Texture2D" uid="uid://cag8pm0ffkrtu" path="res://DiceAnimation/dice0017.png" id="19_qjskt"]
[ext_resource type="Texture2D" uid="uid://cfxkojip1xqr4" path="res://DiceAnimation/dice0018.png" id="20_7ic8w"]
[ext_resource type="Texture2D" uid="uid://f8bywre43xhi" path="res://DiceAnimation/dice0019.png" id="21_jmpsv"]
[ext_resource type="Texture2D" uid="uid://bc1c6yulwh7gq" path="res://DiceAnimation/dice0020.png" id="22_y2ke3"]
[ext_resource type="Texture2D" uid="uid://cr8ysc7bpefdu" path="res://DiceAnimation/dice0021.png" id="23_353wp"]
[ext_resource type="Texture2D" uid="uid://csiukbjkwlfrx" path="res://DiceAnimation/dice0022.png" id="24_upuqy"]
[ext_resource type="Texture2D" uid="uid://c2wsfncv37bx3" path="res://DiceAnimation/dice0023.png" id="25_wfeli"]
[ext_resource type="Texture2D" uid="uid://chaj3jce5s5si" path="res://DiceAnimation/dice0024.png" id="26_fvlhv"]
[ext_resource type="Texture2D" uid="uid://b16ck2kn61l43" path="res://DiceAnimation/dice0025.png" id="27_iswqq"]
[ext_resource type="Texture2D" uid="uid://cqbtk6y17kuvi" path="res://DiceAnimation/dice0026.png" id="28_gpkke"]
[ext_resource type="Texture2D" uid="uid://bwsmfiblhtv3" path="res://DiceAnimation/dice0027.png" id="29_k8d50"]
[ext_resource type="Texture2D" uid="uid://dfxuq533lndem" path="res://DiceAnimation/dice00028.png" id="30_gawr3"]
[ext_resource type="Texture2D" uid="uid://br8fcni7os8xv" path="res://DiceAnimation/dice0029.png" id="31_718yi"]
[ext_resource type="Texture2D" uid="uid://dhqcdu5e7ydn1" path="res://DiceAnimation/dice0030.png" id="32_qanr8"]
[ext_resource type="Texture2D" uid="uid://bik53yywawrvd" path="res://DiceAnimation/dice0031.png" id="33_x078h"]
[ext_resource type="Texture2D" uid="uid://x04q64huip4f" path="res://DiceAnimation/dice0032.png" id="34_b7uvd"]
[ext_resource type="Texture2D" uid="uid://h6sd3bs07slg" path="res://DiceAnimation/dice0033.png" id="35_63ceq"]
[ext_resource type="Texture2D" uid="uid://cqvcxh6ubq724" path="res://DiceAnimation/dice0034.png" id="36_ldwwb"]
[ext_resource type="Texture2D" uid="uid://ccn65a06n68d7" path="res://DiceAnimation/dice0035.png" id="37_2cv04"]
[ext_resource type="Texture2D" uid="uid://c736y6xtge7iu" path="res://DiceAnimation/dice0036.png" id="38_ipe5h"]
[ext_resource type="Texture2D" uid="uid://n15no6lmjqa0" path="res://DiceAnimation/dice0037.png" id="39_3ym22"]
[ext_resource type="Texture2D" uid="uid://lhxk5qbirmvp" path="res://DiceAnimation/dice0038.png" id="40_m4hiu"]
[ext_resource type="Texture2D" uid="uid://cxfc4etlxbpoe" path="res://DiceAnimation/dice0039.png" id="41_mhk05"]
[ext_resource type="Texture2D" uid="uid://drybbmjnsul5r" path="res://DiceAnimation/dice0040.png" id="42_j2rbr"]
[ext_resource type="Texture2D" uid="uid://cw1kpmq3hxvoi" path="res://img/1.png" id="43_01k70"]
[ext_resource type="Texture2D" uid="uid://bvc8q52o1xkf3" path="res://img/2.png" id="44_3wuwd"]
[ext_resource type="Texture2D" uid="uid://dt4ggmt2vcu1t" path="res://img/3.png" id="45_poykh"]
[ext_resource type="Texture2D" uid="uid://kp7bc6app5es" path="res://img/4.png" id="46_ahoxr"]
[ext_resource type="Texture2D" uid="uid://clra26hcufwvp" path="res://img/5.png" id="47_hd4hk"]
[ext_resource type="Texture2D" uid="uid://bjk3vpdmlon" path="res://img/6.png" id="48_msrd6"]
[ext_resource type="Texture2D" uid="uid://bjq2y3gia7g48" path="res://img/player1.png" id="49_j8xso"]
[ext_resource type="Texture2D" uid="uid://xps5xrfl1b2w" path="res://img/player2.png" id="50_tt1vi"]
[ext_resource type="Texture2D" uid="uid://bkuv07yq5s46n" path="res://img/player3.png" id="51_n2qk1"]
[ext_resource type="Texture2D" uid="uid://xyfbipkw1qlu" path="res://img/player4.png" id="52_cy6iq"]
[ext_resource type="Texture2D" uid="uid://bsdi8f1fc1fgi" path="res://img/Screenshot 2568-04-06 at 00.03.30.png" id="53_vhp27"]
[ext_resource type="Texture2D" uid="uid://co1g1ckvdbldd" path="res://img/Screenshot 2568-04-19 at 20.10.32.png" id="54_jpmfk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xlrj8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ejs4e")
}, {
"duration": 1.0,
"texture": ExtResource("4_xbly2")
}, {
"duration": 1.0,
"texture": ExtResource("5_cfig7")
}, {
"duration": 1.0,
"texture": ExtResource("6_ef0p0")
}, {
"duration": 1.0,
"texture": ExtResource("7_v3534")
}, {
"duration": 1.0,
"texture": ExtResource("8_y45fq")
}, {
"duration": 1.0,
"texture": ExtResource("9_jt2x4")
}, {
"duration": 1.0,
"texture": ExtResource("10_h7dq6")
}, {
"duration": 1.0,
"texture": ExtResource("11_v8eo2")
}, {
"duration": 1.0,
"texture": ExtResource("12_x4f80")
}, {
"duration": 1.0,
"texture": ExtResource("13_mnnvm")
}, {
"duration": 1.0,
"texture": ExtResource("14_gknfb")
}, {
"duration": 1.0,
"texture": ExtResource("15_ujmns")
}, {
"duration": 1.0,
"texture": ExtResource("16_j2k6s")
}, {
"duration": 1.0,
"texture": ExtResource("17_1kjr3")
}, {
"duration": 1.0,
"texture": ExtResource("18_xat0t")
}, {
"duration": 1.0,
"texture": ExtResource("19_qjskt")
}, {
"duration": 1.0,
"texture": ExtResource("20_7ic8w")
}, {
"duration": 1.0,
"texture": ExtResource("21_jmpsv")
}, {
"duration": 1.0,
"texture": ExtResource("22_y2ke3")
}, {
"duration": 1.0,
"texture": ExtResource("23_353wp")
}, {
"duration": 1.0,
"texture": ExtResource("24_upuqy")
}, {
"duration": 1.0,
"texture": ExtResource("25_wfeli")
}, {
"duration": 1.0,
"texture": ExtResource("26_fvlhv")
}, {
"duration": 1.0,
"texture": ExtResource("27_iswqq")
}, {
"duration": 1.0,
"texture": ExtResource("28_gpkke")
}, {
"duration": 1.0,
"texture": ExtResource("29_k8d50")
}, {
"duration": 1.0,
"texture": ExtResource("30_gawr3")
}, {
"duration": 1.0,
"texture": ExtResource("31_718yi")
}, {
"duration": 1.0,
"texture": ExtResource("32_qanr8")
}, {
"duration": 1.0,
"texture": ExtResource("33_x078h")
}, {
"duration": 1.0,
"texture": ExtResource("34_b7uvd")
}, {
"duration": 1.0,
"texture": ExtResource("35_63ceq")
}, {
"duration": 1.0,
"texture": ExtResource("36_ldwwb")
}, {
"duration": 1.0,
"texture": ExtResource("37_2cv04")
}, {
"duration": 1.0,
"texture": ExtResource("38_ipe5h")
}, {
"duration": 1.0,
"texture": ExtResource("39_3ym22")
}, {
"duration": 1.0,
"texture": ExtResource("40_m4hiu")
}, {
"duration": 1.0,
"texture": ExtResource("41_mhk05")
}, {
"duration": 1.0,
"texture": ExtResource("42_j2rbr")
}],
"loop": false,
"name": &"DiceRolling",
"speed": 50.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_57u7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_01k70")
}, {
"duration": 1.0,
"texture": ExtResource("44_3wuwd")
}, {
"duration": 1.0,
"texture": ExtResource("45_poykh")
}, {
"duration": 1.0,
"texture": ExtResource("46_ahoxr")
}, {
"duration": 1.0,
"texture": ExtResource("47_hd4hk")
}, {
"duration": 1.0,
"texture": ExtResource("48_msrd6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_figbp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 222, 621, 0, 0, 0, 0, 295, 618, 0, 0, 0, 0, 370, 617, 0, 0, 0, 0, 445, 610, 0, 0, 0, 0, 520, 610, 0, 0, 0, 0, 592, 612, 0, 0, 0, 0, 660, 612, 0, 0, 0, 0, 739, 614, 0, 0, 0, 0, 818, 610, 0, 0, 0, 0, 900, 610, 0, 0, 0, 0, 889, 554, 0, 0, 0, 0, 814, 544, 0, 0, 0, 0, 743, 547, 0, 0, 0, 0, 671, 551, 0, 0, 0, 0, 597, 546, 0, 0, 0, 0, 528, 545, 0, 0, 0, 0, 442, 545, 0, 0, 0, 0, 361, 542, 0, 0, 0, 0, 295, 542, 0, 0, 0, 0, 223, 546, 0, 0, 0, 0, 225, 475, 0, 0, 0, 0, 310, 467, 0, 0, 0, 0, 361, 473, 0, 0, 0, 0, 455, 483, 0, 0, 0, 0, 529, 483, 0, 0, 0, 0, 595, 479, 0, 0, 0, 0, 666, 481, 0, 0, 0, 0, 743, 478, 0, 0, 0, 0, 804, 478, 0, 0, 0, 0, 890, 479, 0, 0, 0, 0, 892, 414, 0, 0, 0, 0, 804, 416, 0, 0, 0, 0, 744, 416, 0, 0, 0, 0, 666, 422, 0, 0, 0, 0, 594, 416, 0, 0, 0, 0, 531, 416, 0, 0, 0, 0, 443, 417, 0, 0, 0, 0, 374, 417, 0, 0, 0, 0, 301, 415, 0, 0, 0, 0, 221, 415, 0, 0, 0, 0, 222, 351, 0, 0, 0, 0, 293, 350, 0, 0, 0, 0, 377, 342, 0, 0, 0, 0, 444, 349, 0, 0, 0, 0, 514, 352, 0, 0, 0, 0, 596, 354, 0, 0, 0, 0, 662, 353, 0, 0, 0, 0, 741, 356, 0, 0, 0, 0, 810, 352, 0, 0, 0, 0, 885, 355, 0, 0, 0, 0, 881, 295, 0, 0, 0, 0, 808, 288, 0, 0, 0, 0, 736, 292, 0, 0, 0, 0, 669, 289, 0, 0, 0, 0, 590, 291, 0, 0, 0, 0, 516, 289, 0, 0, 0, 0, 436, 289, 0, 0, 0, 0, 368, 286, 0, 0, 0, 0, 291, 280, 0, 0, 0, 0, 225, 284, 0, 0, 0, 0, 225, 227, 0, 0, 0, 0, 290, 218, 0, 0, 0, 0, 373, 216, 0, 0, 0, 0, 445, 224, 0, 0, 0, 0, 514, 228, 0, 0, 0, 0, 588, 220, 0, 0, 0, 0, 675, 224, 0, 0, 0, 0, 734, 228, 0, 0, 0, 0, 807, 219, 0, 0, 0, 0, 889, 218, 0, 0, 0, 0, 883, 156, 0, 0, 0, 0, 820, 160, 0, 0, 0, 0, 741, 157, 0, 0, 0, 0, 655, 163, 0, 0, 0, 0, 572, 161, 0, 0, 0, 0, 518, 159, 0, 0, 0, 0, 452, 160, 0, 0, 0, 0, 371, 155, 0, 0, 0, 0, 301, 157, 0, 0, 0, 0, 218, 159, 0, 0, 0, 0, 221, 102, 0, 0, 0, 0, 297, 92, 0, 0, 0, 0, 380, 91, 0, 0, 0, 0, 446, 89, 0, 0, 0, 0, 519, 91, 0, 0, 0, 0, 592, 88, 0, 0, 0, 0, 665, 92, 0, 0, 0, 0, 737, 88, 0, 0, 0, 0, 814, 96, 0, 0, 0, 0, 894, 94, 0, 0, 0, 0, 889, 31, 0, 0, 0, 0, 818, 28, 0, 0, 0, 0, 738, 25, 0, 0, 0, 0, 670, 32, 0, 0, 0, 0, 601, 28, 0, 0, 0, 0, 516, 22, 0, 0, 0, 0, 452, 26, 0, 0, 0, 0, 372, 26, 0, 0, 0, 0, 296, 25, 0, 0, 0, 0, 229, 28)
}
point_count = 100

[node name="Main" type="Node2D"]
script = ExtResource("1_128wf")

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(555, 323)
scale = Vector2(2.06667, 1.78333)
texture = ExtResource("2_aqjna")

[node name="Dice" type="Sprite2D" parent="."]

[node name="DiceAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(1039, 178)
scale = Vector2(0.306122, 0.288889)
sprite_frames = SubResource("SpriteFrames_xlrj8")
animation = &"DiceRolling"

[node name="DiceFace" type="AnimatedSprite2D" parent="."]
position = Vector2(1038, 182)
scale = Vector2(0.363821, 0.342593)
sprite_frames = SubResource("SpriteFrames_57u7y")

[node name="Button" type="Button" parent="DiceFace"]
modulate = Color(1, 1, 1, 0)
offset_left = -173.0
offset_top = -155.0
offset_right = 154.0
offset_bottom = 143.0
text = "Roll"

[node name="PathWalk" type="Path2D" parent="."]
curve = SubResource("Curve2D_figbp")

[node name="Player1" type="Sprite2D" parent="PathWalk"]
position = Vector2(154.38, 610.252)
scale = Vector2(0.0950722, 0.070395)
texture = ExtResource("49_j8xso")

[node name="Player2" type="Sprite2D" parent="PathWalk"]
position = Vector2(154.38, 610.252)
scale = Vector2(0.111281, 0.0644905)
texture = ExtResource("50_tt1vi")

[node name="Player3" type="Sprite2D" parent="PathWalk"]
position = Vector2(154.38, 610.252)
scale = Vector2(0.117133, 0.0611234)
texture = ExtResource("51_n2qk1")

[node name="Player4" type="Sprite2D" parent="PathWalk"]
position = Vector2(154.38, 610.252)
scale = Vector2(0.0908019, 0.0599776)
texture = ExtResource("52_cy6iq")

[node name="PathFollow2D" type="PathFollow2D" parent="PathWalk"]
position = Vector2(222, 621)
rotation = -0.0410728

[node name="BG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(575, 323)
scale = Vector2(0.690132, 0.390832)
texture = ExtResource("53_vhp27")

[node name="Timer" type="Timer" parent="."]

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(567, 313)
scale = Vector2(0.346402, 0.324657)
texture = ExtResource("54_jpmfk")

[connection signal="timer_on_end" from="." to="." method="_on_Main_timer_on_end"]
[connection signal="animation_finished" from="DiceAnimation" to="." method="_on_DiceAnimation_animation_finished"]
[connection signal="pressed" from="DiceFace/Button" to="." method="_on_Dice_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
